--- a/Guia5/Ejericio2CuadroAsteriscos/Ejericio2Asteriscos.csproj
+++ b/Guia5/Ejericio2CuadroAsteriscos/Ejericio2Asteriscos.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F1E28F54-FDCF-4E06-954D-B78181D0B579}</ProjectGuid>
+    <ProjectGuid>{A826DD5B-528E-4F57-B44E-6A7D2A9631C8}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Ejercicio3</RootNamespace>
-    <AssemblyName>Ejercicio3</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <RootNamespace>Ejericio2Asteriscos</RootNamespace>
+    <AssemblyName>Ejericio2Asteriscos</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
