--- a/Guia5/Gallinero/Gallinero.csproj
+++ b/Guia5/Gallinero/Gallinero.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B9EDE533-6D91-4F10-B3EC-9500EFBDFFE9}</ProjectGuid>
+    <ProjectGuid>{635B2143-102F-4CFE-A2F8-9357CA16F239}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Ejercicio1</RootNamespace>
-    <AssemblyName>Ejercicio1</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <RootNamespace>Gallinero</RootNamespace>
+    <AssemblyName>Gallinero</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
